--- a/UI/package.json
+++ b/UI/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "aws-sdk": "^2.1046.0",
     "framer-motion": "^4.1.17",
     "next": "^12.0.4",
     "react": "^17.0.2",
