--- a/Domus_App/requirements.txt
+++ b/Domus_App/requirements.txt
@@ -1,24 +1,33 @@
-aniso8601==9.0.1
-attrs==21.2.0
-boto3==1.20.24
-botocore==1.23.24
+aiofiles==0.7.0
+anyio==3.3.4
+asgiref==3.4.1
+backports.entry-points-selectable==1.1.0
 click==8.0.3
-Flask==2.0.2
-flask-restplus==0.13.0
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.2
-gunicorn==20.1.0
-itsdangerous==2.0.1
-Jinja2==3.0.3
-jmespath==0.10.0
-jsonschema==4.3.1
+cycler==0.11.0
+distlib==0.3.3
+fastapi==0.70.0
+filelock==3.3.1
+h11==0.12.0
+idna==3.3
+imageio==2.10.1
+imutils==0.5.4
+Jinja2==3.0.2
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
-pyrsistent==0.18.0
+matplotlib==3.4.3
+numpy==1.21.3
+opencv-python==4.5.4.58
+orjson==3.6.4
+Pillow==8.4.0
+platformdirs==2.4.0
+pydantic==1.8.2
+pyparsing==3.0.4
 python-dateutil==2.8.2
-pytz==2021.3
-s3transfer==0.5.0
+python-multipart==0.0.5
 six==1.16.0
-SQLAlchemy==1.4.28
-urllib3==1.26.7
-uWSGI==2.0.20
-Werkzeug==2.0.2
+sniffio==1.2.0
+starlette==0.16.0
+typing-extensions==3.10.0.2
+ujson==4.2.0
+uvicorn==0.15.0
+virtualenv==20.9.0
