--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+TerraformWHJW/.terraform/providers/registry.terraform.io/hashicorp/aws/3.74.1/windows_amd64/terraform-provider-aws_v3.74.1_x5.exe
+*.tfvars
+TerraformWHJW/.terraform.lock.hcl
+Domus_App/webapp/templates/libraries/splide.min.css
+Domus_App/webapp/templates/libraries/splide.min.js
+ecp_venv/*
