--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,16 @@ TerraformWHJW/.terraform.lock.hcl
 Domus_App/webapp/templates/libraries/splide.min.css
 Domus_App/webapp/templates/libraries/splide.min.js
 ecp_venv/*
+ecp_venv\*
+*.exe
+*.exe
+*.exe
+ecp_venv/Scripts/activate
+ecp_venv/Scripts/activate.bat
+Domus_App/webapp/templates/libraries/splide.min.css
+Domus_App/webapp/templates/libraries/splide.min.js
+Domus_App/webapp/templates/libraries/splide.min.css
+Domus_App/webapp/templates/libraries/splide.min.js
+*.exe
+Domus_App/webapp/templates/libraries/splide.min.css
+Domus_App/webapp/templates/libraries/splide.min.css
