--- a/Domus_App/.gitignore
+++ b/Domus_App/.gitignore
@@ -150,3 +150,20 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+
+
+.vscode/*
+.vs/*
+Domus_App/webapp/templates/libraries/splide.min.css
+Domus_App/webapp/templates/libraries/splide.min.js
+ecp_venv/*
+ecp_venv\*
+*.exe
+ecp_venv/Scripts/activate
+ecp_venv/Scripts/activate.bat
+Domus_App/webapp/templates/libraries/splide.min.css
+Domus_App/webapp/templates/libraries/splide.min.js
+Domus_App/webapp/templates/libraries/splide.min.css
+Domus_App/webapp/templates/libraries/splide.min.js
+*.exe
+Domus_App/webapp/templates/libraries/splide.min.css
